--- a/eco-core/core-plugin/src/main/resources/config.yml
+++ b/eco-core/core-plugin/src/main/resources/config.yml
@@ -30,3 +30,8 @@ animations:
     radius: 1.5
     height: 1
 
+rolls:
+  csgo:
+    filler: black_stained_glass_pane name:""
+    selector: lime_stained_glass_pane name:""
+    bias: 0.65
