Players will now be launched away from physical crates if they don't have a key

--- a/eco-core/core-plugin/src/main/resources/config.yml
+++ b/eco-core/core-plugin/src/main/resources/config.yml
@@ -3,6 +3,8 @@
 # by Auxilor
 #
 
+no-key-velocity: 1.5 # The speed at which a player should be launched away from a crate if they try to open it without a key. Set to 0 to disable.
+
 keygui:
   rows: 3
   mask:
