Added option to not open crates by clicking in the key gui

--- a/eco-core/core-plugin/src/main/resources/crates.yml
+++ b/eco-core/core-plugin/src/main/resources/crates.yml
@@ -30,8 +30,9 @@ crates:
         - "&fYou have %keys% keys"
       row: 2
       column: 3
-      rightClickMessage:
+      right-click-message:
         - "Buy a Demo Crate key here! get lured into the trap of gambling addiction"
+      left-click-opens: true
 
     placed:
       particles:
