--- a/eco-core/core-plugin/src/main/resources/crates.yml
+++ b/eco-core/core-plugin/src/main/resources/crates.yml
@@ -67,7 +67,8 @@ crates:
           pitch: 1
 
     rewards:
-      - commands: [ ]
+      - id: diamond
+        commands: [ ]
         items:
           - diamond
         messages:
@@ -75,6 +76,7 @@ crates:
         weight:
           actual: 10
           display: 25
+        max-wins: -1
         display:
           name: "&bDiamond"
           item: diamond
@@ -82,7 +84,8 @@ crates:
           row: 2
           column: 2
 
-      - commands: [ ]
+      - id: emerald
+        commands: [ ]
         items:
           - emerald
         messages:
@@ -90,6 +93,7 @@ crates:
         weight:
           actual: 10
           display: 50
+        max-wins: -1
         display:
           name: "&aEmerald"
           item: emerald
@@ -97,7 +101,8 @@ crates:
           row: 2
           column: 3
 
-      - commands: [ ]
+      - id: bedrock
+        commands: [ ]
         items:
           - bedrock
         messages:
@@ -105,6 +110,7 @@ crates:
         weight:
           actual: 10000000
           display: 0
+        max-wins: -1
         display:
           name: "<g:#00ffff>very cool demo bedrock</g:#00ff00>"
           item: bedrock
