Added random rewards that can be shown above crates

--- a/eco-core/core-plugin/src/main/resources/crates.yml
+++ b/eco-core/core-plugin/src/main/resources/crates.yml
@@ -35,6 +35,11 @@ crates:
       left-click-opens: true
 
     placed:
+      random-reward:
+        enabled: true
+        height: 2
+        delay: 30
+        name: "&fYou could win:"
       particles:
         - particle: flame
           animation: spiral
