--- a/eco-core/core-plugin/src/main/resources/crates.yml
+++ b/eco-core/core-plugin/src/main/resources/crates.yml
@@ -26,6 +26,7 @@ crates:
         - "&fdemo crates, yeah?"
 
     keygui:
+      enabled: true
       item: tripwire_hook unbreaking:1 hide_enchants name:"Demo Crate"
       lore:
         - "&famogus? sus? impostor?"
