Added ability to open crates by paying

--- a/eco-core/core-plugin/src/main/resources/crates.yml
+++ b/eco-core/core-plugin/src/main/resources/crates.yml
@@ -38,6 +38,10 @@ crates:
       shift-left-click-messsage:
         - "Buy a Demo Crate key here! get lured into the trap of gambling addiction"
 
+    pay-to-open:
+      enabled: false
+      price: 5000
+
     placed:
       random-reward:
         enabled: true
