Added player key tracking option

--- a/eco-core/core-plugin/src/main/resources/config.yml
+++ b/eco-core/core-plugin/src/main/resources/config.yml
@@ -4,6 +4,7 @@
 #
 
 no-key-velocity: 1.5 # The speed at which a player should be launched away from a crate if they try to open it without a key. Set to 0 to disable.
+track-player-keys: false # If an NBT tag should be added to keys that links them to a player - will prevent stacking some keys.
 
 # If a reward allows permission multipliers, the weights
 # will be multiplied by highest-priority multiplier that a player
