--- a/build.gradle
+++ b/build.gradle
@@ -75,7 +75,7 @@ allprojects {
     }
     
     processResources {
-        filesNotMatching(["**/*.png", "**/models/**", "**/textures/**"]) {
+        filesNotMatching(["**/*.png", "**/models/**", "**/textures/**", "**rewards.yml"]) {
             expand projectVersion: project.version
         }
     }
