- Added base for creating converters from other crate plugins - Added CrateReloaded converter (/ecocrates convert CrateReloaded)

--- a/eco-core/core-plugin/src/main/resources/lang.yml
+++ b/eco-core/core-plugin/src/main/resources/lang.yml
@@ -18,3 +18,6 @@ messages:
   resetting-wins: "&fResetting wins for %user%&f..."
   reset-wins: "&fReset wins for %user%&f!"
   no-crate-permission: "&cYou don't have permission to open this crate!"
+  must-specify-converter: "&cYou must specify a valid converter!"
+  invalid-converter: "&cUnknown converter!"
+  converted: "&aConverted successfully!"
