--- a/eco-core/core-plugin/build.gradle
+++ b/eco-core/core-plugin/build.gradle
@@ -3,4 +3,5 @@ version rootProject.version
 
 dependencies {
     compileOnly 'org.spigotmc:spigot-api:1.17.1-R0.1-SNAPSHOT'
+    compileOnly fileTree(dir: '../../lib', include: ['*.jar'])
 }
