--- a/eco-core/core-plugin/src/main/resources/crates.yml
+++ b/eco-core/core-plugin/src/main/resources/crates.yml
@@ -1,16 +1,16 @@
 crates:
-  - id: demo
-    name: "Demo Crate"
-    roll: csgo
-    can-reroll: true
+  - id: demo # The ID of the crate
+    name: "Demo Crate" # The display name of the crate
+    roll: csgo # The opening style, check here: https://plugins.auxilor.io/ecocrates/animations-rolls
+    can-reroll: true # If once you win a reward, you can choose to reroll
 
-    preview:
-      title: Demo Crate
-      rows: 6
-      mask:
-        items:
-          - gray_stained_glass_pane
-          - black_stained_glass_pane
+    preview: # The preview GUI, when left-clicking a crate or using /crates preview
+      title: Demo Crate # The GUI title
+      rows: 6 # The amount of rows for the gui, between 1 and 6
+      mask: # Filler items for decoration
+        items: # Add as many items as you want
+          - gray_stained_glass_pane # Item 1
+          - black_stained_glass_pane # Item 2
         pattern:
           - "222222222"
           - "211010112"
@@ -19,44 +19,44 @@ crates:
           - "201111102"
           - "222222222"
 
-    key:
-      item: tripwire_hook unbreaking:1 hide_enchants name:"&aDemo Crate Key"
-      lore:
+    key: # The physical key to be given to players
+      item: tripwire_hook unbreaking:1 hide_enchants name:"&aDemo Crate Key" # The item
+      lore: # Lore for the key to have
         - "&fUse this key to open"
         - "&fthe <g:#56ab2f>Demo Crate</g:#a8e063>"
 
-    keygui:
-      enabled: true
-      item: tripwire_hook unbreaking:1 hide_enchants name:"Demo Crate"
-      lore:
+    keygui: # Options for showing up in /crate keys
+      enabled: true # If the crate should be in the key gui
+      item: tripwire_hook unbreaking:1 hide_enchants name:"Demo Crate" # The item in the gui
+      lore: # The GUI lore
         - "<g:#56ab2f>Demo Crate</g:#a8e063>"
         - "&fYou have %keys% keys"
         - "&fGet more at &astore.example.net"
-      row: 2
+      row: 2 # The position in the gui
       column: 3
-      right-click-previews: true
-      left-click-opens: true
-      shift-left-click-messsage:
+      right-click-previews: true # If right click opens the preview
+      left-click-opens: true # If left click open the crate virtually
+      shift-left-click-messsage: # The messages to send on shift-left-click
         - "Buy a Demo Crate key here! &astore.example.net"
 
-    pay-to-open:
-      enabled: false
-      price: 5000
+    pay-to-open: # If people can pay to open if they have no keys
+      enabled: false # If it should be allowed
+      price: 5000 # The price to buy the crate
 
-    placed:
-      random-reward:
-        enabled: true
-        height: 1.5
-        delay: 30
-        name: "&fYou could win:"
-      particles:
-        - particle: flame
-          animation: spiral
-      hologram:
-        height: 1.5
-        ticks: 200
+    placed: # Options for physically placed crates
+      random-reward: # The random reward hologram, shows an item
+        enabled: true # If the random reward should be shown
+        height: 1.5 # The height above the crate at which to show the reward
+        delay: 30 # The ticks between showing a new item
+        name: "&fYou could win:" # The text above the item
+      particles: # The particle effects around the crate, add as many as you want
+        - particle: flame # https://hub.spigotmc.org/javadocs/spigot/org/bukkit/Particle.html
+          animation: spiral # spiral, double_spiral, circle, or twirl
+      hologram: # The text hologram, requires a hologram plugin to be installed
+        height: 1.5 # The height above the crate
+        ticks: 200 # The total ticks to cycle all frames
         frames:
-          - tick: 0
+          - tick: 0 # The starting tick to show this frame
             lines:
               - "<g:#56ab2f>&lDEMO CRATE</g:#a8e063>"
               - "&b&lLeft Click to Preview"
@@ -67,40 +67,40 @@ crates:
               - "&a&lLeft Click to Preview"
               - '&b&lRight click to Open'
 
-    open:
-      messages:
+    open: # Effects when opening the crate, before rewards are given - right when the player clicks
+      messages: # The messages to send the player
         - "Good luck!"
-      broadcasts:
+      broadcasts: # The messages to send to everyone
         - "%player%&f is opening the Demo Crate!"
-      commands: [ ]
-      sounds:
-        - sound: entity_villager_yes
-          volume: 10
-          pitch: 1
+      commands: [ ] # Commands to execute, use %player% as a placeholder
+      sounds: # The sounds to play
+        - sound: entity_villager_yes # https://hub.spigotmc.org/javadocs/bukkit/org/bukkit/Sound.html
+          volume: 10 # Essentially the distance at which the sound should be heard
+          pitch: 1 # Between 0.5 and 2
 
-    finish:
-      messages:
+    finish: # Effects once the crate rewards have been given
+      messages: # The messages to send the player
         - "You won %reward%&f!"
-      broadcasts:
+      broadcasts: # The messages to send to everyone
         - "%player%&f won %reward%&f from the Demo Crate!"
-      commands: [ ]
-      fireworks:
-        - power: 2
-          type: ball_large
-          colors:
+      commands: [ ] # Commands to execute, use %player% as a placeholder
+      fireworks: # The fireworks to launch, add as many as you want
+        - power: 2 # The duration of the firework, set to 0 for instant explosion
+          type: ball_large # https://hub.spigotmc.org/javadocs/spigot/org/bukkit/FireworkEffect.Type.html
+          colors: # Any hex colors
             - 00ffff
             - 00ff00
-          fade-colors:
+          fade-colors: # Any hex colors
             - ffffff
             - 999999
           trail: true
           flicker: true
-      sounds:
-        - sound: entity_generic_explode
-          volume: 10
-          pitch: 1
+      sounds: # The sounds to play, ad ass many as you want
+        - sound: entity_generic_explode # https://hub.spigotmc.org/javadocs/bukkit/org/bukkit/Sound.html
+          volume: 10 # Essentially the distance at which the sound should be heard
+          pitch: 1 # Between 0.5 and 2
 
-    rewards:
+    rewards: # The rewards to give, configure in rewards.yml
       - diamond_sword
       - stack_of_emeralds
       - bedrock
