--- a/eco-core/core-plugin/src/main/resources/lang.yml
+++ b/eco-core/core-plugin/src/main/resources/lang.yml
@@ -21,3 +21,4 @@ messages:
   must-specify-converter: "&cYou must specify a valid converter!"
   invalid-converter: "&cUnknown converter!"
   converted: "&aConverted successfully!"
+  converting: "Attempting to convert..."
