--- a/eco-core/core-plugin/src/main/resources/lang.yml
+++ b/eco-core/core-plugin/src/main/resources/lang.yml
@@ -11,6 +11,7 @@ messages:
   must-specify-player: "&cYou must specify a player!"
   invalid-player: "&cUnknown player!"
   gave-keys: "Gave %amount%&f %crate%&f key(s) to %user%&f!"
+  gave-keys-all: "Gave %amount%&f %crate%&f key(s) to all online players!"
   must-target-block: "&cYou must be looking at a block!"
   set-block-as-crate: "Set block to be a crate!"
   removed-crate: "Removed crate!"
