Added tilted_rings animation

--- a/eco-core/core-plugin/src/main/resources/config.yml
+++ b/eco-core/core-plugin/src/main/resources/config.yml
@@ -77,6 +77,11 @@ animations:
     large-radius: 1.2
     start-height: 2
     end-height: 0.7
+  tilted_rings:
+    spirals-per-second: 0.5
+    radius: 1.5
+    y-offset: 1
+    x-offset: 1
 
 rolls:
   csgo:
