Added command aliases

--- a/eco-core/core-plugin/src/main/resources/plugin.yml
+++ b/eco-core/core-plugin/src/main/resources/plugin.yml
@@ -19,6 +19,8 @@ commands:
     aliases:
       - crates
       - crate
+      - key
+      - keys
     description: Base plugin command
     permission: ecocrates.command.ecocrates
 
