--- a/eco-core/core-plugin/src/main/resources/plugin.yml
+++ b/eco-core/core-plugin/src/main/resources/plugin.yml
@@ -42,6 +42,7 @@ permissions:
       ecocrates.command.resetwins: true
       ecocrates.command.convert: true
       ecocrates.command.giveall: true
+      ecocrates.rewards.*: true
       ecocrates.break: true
       ecocrates.open.*: true
       ecocrates.reroll.*: true
@@ -93,4 +94,7 @@ permissions:
     default: true
   ecocrates.reroll.*:
     description: Allows rerolling all crates
+    default: true
+  ecocrates.rewards.*:
+    description: Allows getting all rewards
     default: true
