--- a/eco-core/core-plugin/src/main/resources/lang.yml
+++ b/eco-core/core-plugin/src/main/resources/lang.yml
@@ -12,6 +12,8 @@ messages:
   invalid-player: "&cUnknown player!"
   gave-keys: "Gave %amount%&f %crate%&f key(s) to %user%&f!"
   gave-keys-all: "Gave %amount%&f %crate%&f key(s) to all online players!"
+  took-keys: "Took %amount%&f %crate%&f key(s) from %user%&f!"
+  not-enough-took-keys: "&c%user%&f has not enough %crate% key(s) to take!"
   must-target-block: "&cYou must be looking at a block!"
   set-block-as-crate: "Set block to be a crate!"
   removed-crate: "Removed crate!"
