--- a/eco-core/core-plugin/src/main/resources/plugin.yml
+++ b/eco-core/core-plugin/src/main/resources/plugin.yml
@@ -32,6 +32,7 @@ permissions:
       ecocrates.command.reload: true
       ecocrates.command.ecocrates: true
       ecocrates.command.give: true
+      ecocrates.command.take: true
       ecocrates.command.open: true
       ecocrates.command.open.others: true
       ecocrates.command.preview: true
@@ -58,6 +59,9 @@ permissions:
     default: op
   ecocrates.command.giveall:
     description: Allows giving all players keys
+    default: op
+  ecocrates.command.take:
+    description: Allows taking players keys
     default: op
   ecocrates.command.open:
     description: Allows opening crates with /ecocrates open
